--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
                             </div>
                             <span class="right-btn"></span>
                         </div>
-                        <div class="grid-con"></div>
+                        <div class="grid-con">
+                            <ul>
+                                <li>
+                                    <img src="" alt="">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur</p>                                
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
