--- a/index.html
+++ b/index.html
@@ -47,7 +47,35 @@
                         <div class="grid-con">
                             <ul>
                                 <li>
-                                    <img src="" alt="">
+                                    <img src="img/sec0.png" alt="img0">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur</p>                                
+                                </li>
+                                <li>
+                                    <img src="img/sec1.png" alt="img1">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur</p>                                
+                                </li>
+                                <li>
+                                    <img src="img/sec0.png" alt="img0">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur</p>                                
+                                </li>
+                                <li>
+                                    <img src="img/sec1.png" alt="img1">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur</p>                                
+                                </li>
+                                <li>
+                                    <img src="img/sec0.png" alt="img0">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur</p>                                
+                                </li>
+                                <li>
+                                    <img src="img/sec1.png" alt="img1">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur</p>                                
+                                </li>
+                                <li>
+                                    <img src="img/sec0.png" alt="img0">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur</p>                                
+                                </li>
+                                <li>
+                                    <img src="img/sec1.png" alt="img1">
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur</p>                                
                                 </li>
                             </ul>
